post tooltips: fix long usernames causing header to overflow.
* Make tooltips wider.
* Abbreviate ratings.
* Truncate long usernames.

--- a/app/javascript/src/styles/specific/post_tooltips.scss
+++ b/app/javascript/src/styles/specific/post_tooltips.scss
@@ -46,7 +46,8 @@ $tooltip-body-height: $tooltip-line-height * 4; // 4 lines high.
 }
 
 .tippy-box[data-theme~="post-tooltip"] {
-  min-width: 200px;
+  min-width: 20em;
+  max-width: 40em !important;
   font-size: 11px;
   line-height: $tooltip-line-height;
 
@@ -80,34 +81,32 @@ $tooltip-body-height: $tooltip-line-height * 4; // 4 lines high.
       .post-tooltip-body-right { flex: 1; }
     }
 
-    .post-tooltip-header {
+    div.post-tooltip-header {
       background-color: var(--post-tooltip-header-background-color);
       display: flex;
       white-space: nowrap;
-      overflow: hidden;
+      align-items: center;
 
-      .post-tooltip-header-left {
-        flex: 1;
+      .post-tooltip-info {
+        margin-right: 0.5em;
+        color: var(--post-tooltip-info-color);
+        font-size: 10px;
+        flex: 0;
       }
 
-      .post-tooltip-header-right {
+      a.user {
+        margin-right: 0.5em;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        min-width: 0;
+        max-width: 11em;
+      }
+
+      .post-tooltip-source {
         flex: 1;
         text-align: right;
       }
-
-      .fa-xs {
-        vertical-align: baseline;
-      }
-
-      .post-tooltip-disable {
-        margin-left: 0.5em;
-      }
-    }
-
-    .post-tooltip-info {
-      margin-left: 0.5em;
-      color: var(--post-tooltip-info-color);
-      font-size: 10px;
     }
   }
 }
